--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,16 @@ body {
   min-height: 100vh;
   display: grid;
   grid-template-rows: 1fr auto;
-  width: 100%;
-  justify-items: center; }
+  justify-items: center;
+  align-items: center;
+  width: 100%; }
 
 .container {
   max-width: 500px;
   width: 90%; }
+  @media (min-width: 570px) {
+    .container {
+      max-width: 900px; } }
 
 .content {
   margin: 10rem 0;
@@ -33,6 +37,22 @@ body {
     background-color: #1c1f4a;
     border-radius: 1.5rem;
     overflow: hidden; }
+    @media (min-width: 570px) {
+      .content__user-block {
+        grid-column-start: 1;
+        grid-column-end: 3; } }
+    @media (min-width: 1140px) {
+      .content__user-block {
+        grid-column: 1 / 2;
+        grid-row: 1/ 4; } }
+  @media (min-width: 570px) {
+    .content {
+      grid-template-columns: 45% 45%;
+      align-items: flex-start; } }
+  @media (min-width: 1140px) {
+    .content {
+      grid-template-columns: 22% 22% 22% 22%;
+      align-items: flex-start; } }
   .content__human-box {
     width: 100%;
     display: flex;
@@ -41,19 +61,32 @@ body {
     background-color: #5847eb;
     padding: 3rem 2.5rem;
     border-radius: 1.5rem; }
+    @media (min-width: 1140px) {
+      .content__human-box {
+        flex-direction: column;
+        align-items: flex-start; } }
   .content__user-picture {
     width: 7rem;
     border: 0.2rem solid white;
     border-radius: 50%; }
+    @media (min-width: 1140px) {
+      .content__user-picture {
+        width: 6rem; } }
   .content__user-info {
-    font-family: "Rubik", sans-serif; }
+    margin: 2rem 0 4rem 0; }
   .content__user-text {
     font-size: 1.5rem;
     opacity: 0.5; }
+    @media (min-width: 1140px) {
+      .content__user-text {
+        font-size: 1.1rem; } }
   .content__user-name {
     font-size: 2.5rem;
     font-weight: 300;
     opacity: 0.8; }
+    @media (min-width: 1140px) {
+      .content__user-name {
+        font-size: 3rem; } }
   .content__list {
     display: flex;
     justify-content: center;
@@ -61,10 +94,23 @@ body {
     list-style: none;
     gap: 5rem;
     padding: 2rem 0; }
+    @media (min-width: 570px) {
+      .content__list {
+        gap: 10rem; } }
+    @media (min-width: 1140px) {
+      .content__list {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1.5rem;
+        padding: 2rem 2.5rem; } }
   .content__link {
     color: #6f76c8;
     text-decoration: none;
     font-size: 1.8rem; }
+    @media (min-width: 1140px) {
+      .content__link {
+        font-size: 1.5rem; } }
   .content__card {
     background-color: #1c1f4a;
     border-radius: 1.5rem;
@@ -109,15 +155,35 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem; }
+    @media (min-width: 1140px) {
+      .content__title-wrapper {
+        margin-bottom: 2rem; } }
+  @media (min-width: 1140px) {
+    .content__title {
+      font-size: 1.3rem; } }
   .content__ellips {
     height: 0.5rem; }
+    @media (min-width: 1140px) {
+      .content__ellips {
+        height: 0.4rem; } }
   .content__hours-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media (min-width: 1140px) {
+      .content__hours-wrapper {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem; } }
   .content__hour {
     font-size: 3rem;
     font-weight: 300; }
+    @media (min-width: 1140px) {
+      .content__hour {
+        font-size: 4rem; } }
   .content__date {
     color: #6f76c8;
     font-size: 1.4rem; }
+    @media (min-width: 1140px) {
+      .content__date {
+        font-size: 1.1rem; } }
