--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -8,7 +8,7 @@ $color--selfCare: hsl(43, 84%, 65%);
 
 $color--veryDarkBlue: hsl(226, 43%, 10%);
 $color--DarkBlue: hsl(235, 46%, 20%);
-$color--: hsl(235, 45%, 61%);
+$color--Desaturated: hsl(235, 45%, 61%);
 $color--Pale: hsl(236, 100%, 87%);
 
 $font-primary: "Open Sans", sans-serif;
