--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   margin: 10rem 0;
   display: grid;
   align-items: center;
-  grid-gap: 6rem; }
+  grid-gap: 6rem 2rem; }
   .content__user-block {
     background-color: #1c1f4a;
     border-radius: 1.5rem;
@@ -44,7 +44,7 @@ body {
     @media (min-width: 1140px) {
       .content__user-block {
         grid-column: 1 / 2;
-        grid-row: 1/ 4; } }
+        grid-row: 1/ 3; } }
   @media (min-width: 570px) {
     .content {
       grid-template-columns: 45% 45%;
@@ -111,6 +111,10 @@ body {
     @media (min-width: 1140px) {
       .content__link {
         font-size: 1.5rem; } }
+    .content__link:hover {
+      color: #bdc1ff; }
+  .content__link-active {
+    color: #bdc1ff; }
   .content__card {
     background-color: #1c1f4a;
     border-radius: 1.5rem;
