--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -2,7 +2,7 @@
   margin: 10rem 0;
   display: grid;
   align-items: center;
-  grid-gap: 6rem;
+  grid-gap: 6rem 2rem;
   &__user-block {
     background-color: $color--DarkBlue;
     border-radius: 1.5rem;
@@ -13,7 +13,7 @@
     }
     @media (min-width: 1140px) {
       grid-column: 1 / 2;
-      grid-row: 1/ 4;
+      grid-row: 1/ 3;
 
       //   height: 100%;
     }
@@ -24,6 +24,7 @@
   }
   @media (min-width: 1140px) {
     grid-template-columns: 22% 22% 22% 22%;
+    // grid-template-rows: 50% 50%;
     // gap: 6rem;
     // align-items: unset;
     align-items: flex-start;
@@ -107,9 +108,14 @@
     @media (min-width: 1140px) {
       font-size: 1.5rem;
     }
+
     &:hover {
-      color: white;
+      color: $color--Pale;
     }
+  }
+
+  &__link-active {
+    color: $color--Pale;
   }
 
   &__card {
@@ -176,12 +182,7 @@
         background-position: top -1.2rem right 1.5rem;
       }
     }
-    &:hover {
-      &::after {
-        background-color: $color--Desaturated;
-        cursor: pointer;
-      }
-    }
+    //
   }
 
   &__title-wrapper {
