--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -4,18 +4,15 @@
   align-items: center;
   grid-gap: 6rem 2rem;
   &__user-block {
-    background-color: $color--DarkBlue;
+    background-color: $color--darkBlue;
     border-radius: 1.5rem;
     overflow: hidden;
     @media (min-width: 570px) {
-      grid-column-start: 1;
-      grid-column-end: 3;
+      grid-column: 1 / 3;
     }
     @media (min-width: 1140px) {
       grid-column: 1 / 2;
       grid-row: 1/ 3;
-
-      //   height: 100%;
     }
   }
   @media (min-width: 570px) {
@@ -23,12 +20,9 @@
     align-items: flex-start;
   }
   @media (min-width: 1140px) {
-    grid-template-columns: 22% 22% 22% 22%;
-    // grid-template-rows: 50% 50%;
-    // gap: 6rem;
-    // align-items: unset;
-    align-items: flex-start;
-    // width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: flex-end;
+    grid-gap: 2rem 2rem;
   }
 
   &__human-box {
@@ -37,12 +31,13 @@
     // justify-content: center;
     align-items: center;
     gap: 1.5rem;
-    background-color: $color-primary;
+    background-color: $color--primary;
     padding: 3rem 2.5rem;
     border-radius: 1.5rem;
     @media (min-width: 1140px) {
       flex-direction: column;
       align-items: flex-start;
+      padding: 4rem 2.5rem;
     }
   }
 
@@ -76,9 +71,6 @@
     }
   }
 
-  &__user-options {
-  }
-
   &__list {
     display: flex;
     justify-content: center;
@@ -97,12 +89,8 @@
       padding: 2rem 2.5rem;
     }
   }
-
-  &__item {
-  }
-
   &__link {
-    color: $color--Desaturated;
+    color: $color--desaturated;
     text-decoration: none;
     font-size: 1.8rem;
     @media (min-width: 1140px) {
@@ -110,19 +98,20 @@
     }
 
     &:hover {
-      color: $color--Pale;
+      color: $color--pale;
     }
   }
 
   &__link-active {
-    color: $color--Pale;
+    color: $color--pale;
   }
 
   &__card {
-    background-color: $color--DarkBlue;
+    background-color: $color--darkBlue;
     border-radius: 1.5rem;
     padding: 3rem 2rem;
     position: relative;
+    transition: all 0.3s;
     &::before {
       content: "";
       width: 100%;
@@ -134,8 +123,16 @@
       background-repeat: no-repeat;
       z-index: -1;
     }
+    &:hover {
+      background-color: $color--cardHover;
+      cursor: pointer;
+    }
 
     &--work {
+      @media (min-width: 1140px) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
       &::before {
         background-image: url(../images/icon-work.svg);
         background-color: $color--work;
@@ -144,6 +141,10 @@
     }
 
     &--play {
+      @media (min-width: 1140px) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+      }
       &::before {
         background-image: url(../images/icon-play.svg);
         background-color: $color--play;
@@ -152,6 +153,10 @@
     }
 
     &--study {
+      @media (min-width: 1140px) {
+        grid-column: 4 / 5;
+        grid-row: 1 / 2;
+      }
       &::before {
         background-image: url(../images/icon-study.svg);
         background-color: $color--study;
@@ -160,6 +165,10 @@
     }
 
     &--exercise {
+      @media (min-width: 1140px) {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+      }
       &::before {
         background-image: url(../images/icon-exercise.svg);
         background-color: $color--exercise;
@@ -168,6 +177,10 @@
     }
 
     &--social {
+      @media (min-width: 1140px) {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+      }
       &::before {
         background-image: url(../images/icon-social.svg);
         background-color: $color--social;
@@ -176,6 +189,10 @@
     }
 
     &--selfCare {
+      @media (min-width: 1140px) {
+        grid-column: 4 / 5;
+        grid-row: 2 / 3;
+      }
       &::before {
         background-image: url(../images/icon-self-care.svg);
         background-color: $color--selfCare;
@@ -192,6 +209,12 @@
     margin-bottom: 1rem;
     @media (min-width: 1140px) {
       margin-bottom: 2rem;
+    }
+    & svg {
+      fill: #bbc0ff;
+      &:hover {
+        fill: white;
+      }
     }
   }
 
@@ -228,7 +251,7 @@
   }
 
   &__date {
-    color: $color--Desaturated;
+    color: $color--desaturated;
     font-size: 1.4rem;
     @media (min-width: 1140px) {
       font-size: 1.1rem;
