--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -98,12 +98,12 @@
     }
 
     &:hover {
-      color: $color--pale;
+      color: white;
     }
   }
 
   &__link-active {
-    color: $color--pale;
+    color: white;
   }
 
   &__card {
