--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -2,6 +2,7 @@
   margin: 10rem 0;
   display: grid;
   align-items: center;
+  justify-content: center;
   grid-gap: 6rem 2rem;
   &__user-block {
     background-color: $color--darkBlue;
@@ -256,5 +257,24 @@
     @media (min-width: 1140px) {
       font-size: 1.1rem;
     }
+  }
+}
+
+.attribution {
+  width: 100%;
+  font-size: clamp(1rem, 1vw, 1.2rem);
+  text-align: center;
+  margin-bottom: 5rem;
+
+  &__link:link,
+  &__link:visited {
+    text-transform: uppercase;
+    color: $color--primary;
+    transition: all 0.2s;
+  }
+
+  &__link:hover,
+  &__link:active {
+    color: $color--pale;
   }
 }
