--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -37,6 +37,6 @@ body {
   display: grid;
   grid-template-rows: 1fr auto;
   justify-items: center;
-  // align-items: center;
+  align-items: center;
   width: 100%;
 }
