--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   display: grid;
   grid-template-rows: 1fr auto;
   justify-items: center;
+  align-items: center;
   width: 100%; }
 
 .container {
